# config/configRedis.js
@@ -1,0 +1,10 @@
+module.exports = {
+    LAST_BLOCK: 'lastBlock',
+    BLOCKS: 'blocks',
+    ACCOUNTS: 'accounts',
+    AVATAR: 'avatar',
+    FOLLOWINGS: 'followings',
+    POST: 'post',
+    INTERACT: 'interact',
+}
+ơ
