# models/account.js
@@ -1,0 +1,40 @@
+'use strict';
+
+var configRedis = require('../config/configRedis');
+
+class Account {
+    constructor() {
+
+    }
+    
+    create(address) {
+
+    }
+
+    payment(address, amount) {
+
+    }
+    update(type, value){
+        switch (type) {
+            case 'name':
+                
+                break;
+            case 'picture':
+                break;
+            default:
+                break;
+        }
+    }
+    post(content) {
+
+    }
+    interact(type, postId) {
+
+    }
+    following(address) {
+
+    }
+
+}
+
+module.exports = Redisson;
